--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,14 @@ coverage.xml
 
 # Dependencies
 node_modules/
+.npm/
+.yarn/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.parcel-cache/
+.eslintcache
+.nvmrc
 
 # RAG Configuration (contains sensitive API keys)
 rag/config/rag_config.json
